<resources>
    <string name="app_name">RU Pizza</string>
    <string name="hello_world">Hello World!</string>
    <string name="size_description">Pizza Size</string>
    <string name="pizza_title">Pizza Name</string>

    <!-- The Toppings. -->
    <string name="sausage">Sausage</string>
    <string name="pepperoni">Pepperoni</string>
    <string name="greenpepper">Green Pepper</string>
    <string name="onion">Onion</string>
    <string name="mushroom">Mushroom</string>
    <string name="bbqchicken">BBQ Chicken</string>
    <string name="provolone">Provolone</string>
    <string name="cheddar">Cheddar</string>
    <string name="beef">Beef</string>
    <string name="ham">Ham</string>
    <string name="spinach">Spinach</string>
    <string name="pineapple">Pineapple</string>
    <string name="olives">Olives</string>


    <string name="submit_order">Submit Order</string>
    <string name="order_total">Order Total</string>
    <string name="ordernumberplace">orderNumberPlace</string>
    <string name="subtotalplace">subtotalPlace</string>
    <string name="salestaxplace">salesTaxPlace</string>
    <string name="ordertotalplace">orderTotalPlace</string>
    <string name="currentOrderActivityName">Current Order</string>
    <string name="storeOrderActivityName">Store Order</string>
    <string name="order_number">"ORDER NUMBER: "</string>
    <string name="current_value">Current Order</string>
    <string name="place_order">Place Order</string>
    <string name="clear_order">Clear Order</string>
    <string name="subtotal">Subtotal: $</string>
    <string name="spaces">"   "</string>
    <string name="sales_tax">Sales Tax: $</string>
    <string name="order_total_1">Order Total: $</string>
    <string name="store_orders">Store Orders</string>
    <string name="order_number_orders">Order Number:</string>
    <string name="order_number_order">order number</string>
    <string name="order_total_display">Order Total $:</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="ru_pizza" />
    <string name="ru_pizza_name">RU Pizza</string>
    <string name="remove_instruction">CLICK PIZZA TO REMOVE FROM ORDER</string>


</resources>