<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EF1535">

    <TextView
        android:id="@+id/textView"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        android:backgroundTint="#E91E63"
        android:fontFamily="sans-serif-smallcaps"
        android:includeFontPadding="true"
        android:text="@string/current_value"
        android:textAlignment="center"

        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        android:typeface="serif"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.039"
        app:drawableTint="#FFFFFF" />

    <LinearLayout
        android:id="@+id/orderNumBox"
        android:layout_width="258dp"
        android:layout_height="46dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.067">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="93dp"
            android:layout_height="34dp"
            android:layout_weight="1"
            android:text="@string/order_number"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/orderNumberPH"
            android:layout_width="wrap_content"
            android:layout_height="34dp"
            android:layout_weight="1"
            android:contentDescription="@string/ordernumberplace"
            android:text="@string/hello_world"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="347dp"
        android:layout_height="59dp"
        android:layout_marginBottom="150dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pizzaOrdersDisplay">

        <Button
            android:id="@+id/placeOrder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:onClick="placeOrder"
            android:text="@string/place_order" />

        <Button
            android:id="@+id/clearOrder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="clearOrder"
            android:text="@string/clear_order" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="165dp"
        android:layout_height="114dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/subtotal"
                android:layout_width="26dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/subtotal"
                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/subtotalPlaceHolder"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/subtotalplace"
                android:textColor="#FFFFFF" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/salesTax"
                android:layout_width="26dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/sales_tax"
                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/salesTaxPlaceHolder"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/salestaxplace"
                android:textColor="#FFFFFF" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/orderTotalText"
                android:layout_width="47dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/order_total_1"
                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/orderTotalPlaceHolder"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/ordertotalplace"
                android:textColor="#FFFFFF" />
        </LinearLayout>
    </LinearLayout>

    <ListView
        android:id="@+id/pizzaOrdersDisplay"
        android:layout_width="368dp"
        android:layout_height="379dp"
        android:cacheColorHint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orderNumBox"
        app:layout_constraintVertical_bias="0.092" />

</androidx.constraintlayout.widget.ConstraintLayout>